fix deck description unfold on mobile

--- a/react-frontend/src/assets/css/style.styl
+++ b/react-frontend/src/assets/css/style.styl
@@ -342,7 +342,7 @@ button.btn-danger:hover
   &__dropdown-indicator
     background: var(--bg-primary)
   &__menu
-    z-index:  3 !important
+    z-index:  4 !important
   &__menu-list
     background: var(--bg-primary)
     color: var(--fg-primary)
@@ -369,7 +369,7 @@ button.btn-danger:hover
   &__indicators
     display: none !important
   &__menu
-    z-index:  3 !important
+    z-index:  4 !important
   &__menu-list
     background: var(--bg-primary)
     color: var(--fg-primary)
@@ -1074,7 +1074,7 @@ div.float-left-bottom
   border-radius: 25px
   color: white
   text-align: center
-  z-index: 1
+  z-index: 3
 
 div.float-right-top
   bottom: 175px
